--- a/index.html
+++ b/index.html
@@ -31,12 +31,20 @@
                 crossorigin="anonymous">
 </head>
 
-<body>
+<body>        
+    <div id="preloader">
+        <div
+            class="loader_bg bg-black vh-100 d-flex align-items-center justify-content-center  position-fixed  top-0 start-0 w-100 z-6">
+            <div class="d-flex align-items-center justify-content-center preloder-img ">
+                <img src="./assets/images/logo-page-img-1.png" alt="">
+            </div>
+        </div>
+    </div>
+
         <section class="bg-img">
                 <div class="container my-container">
                         <div class="row">
-                                <div
-                                        class="col-lg-6 col-md-12 col-12 d-flex  flex-column align-items-center justify-content-center pb-lg-0 pb-5 pt-lg-0 pt-3  ">
+                                <div class="col-lg-6 col-md-12 col-12 d-flex  flex-column align-items-center justify-content-center pb-lg-0 pb-5 pt-lg-0 pt-3  ">
                                         <div class="mx-344">
                                                 <img src="./assets/images/logo-page-img-1.png" alt="">
                                                 <h2 class="m-0 fs-lg black fw-semibold pt-5 pb-2 ff-poppins">Sign in
@@ -74,7 +82,7 @@
                                                         <input class="email1 fs-sm gray fw-normal ff-lato "
                                                                 type="password" placeholder="Password" id="password">
 
-                                                        <svg id="eye" width="18" height="18" viewBox="0 0 18 18"
+                                                        <svg class="cursor-pointer" id="eye" width="18" height="18" viewBox="0 0 18 18"
                                                                 fill="none" xmlns="http://www.w3.org/2000/svg">
                                                                 <g clip-path="url(#clip0_26616_1133)">
                                                                         <path d="M7.00649 14.0865L5.55824 13.698L6.14849 11.4938C5.26497 11.1679 4.44383 10.693 3.72074 10.0898L2.10599 11.7053L1.04474 10.644L2.66024 9.02927C1.7483 7.93709 1.13555 6.62684 0.881989 5.22677L2.35799 4.95752C2.92724 8.10902 5.68424 10.5 8.99999 10.5C12.315 10.5 15.0727 8.10902 15.642 4.95752L17.118 5.22602C16.8648 6.62628 16.2523 7.9368 15.3405 9.02927L16.9552 10.644L15.894 11.7053L14.2792 10.0898C13.5562 10.693 12.735 11.1679 11.8515 11.4938L12.4417 13.6988L10.9935 14.0865L10.4025 11.8815C9.47425 12.0406 8.52572 12.0406 7.59749 11.8815L7.00649 14.0865Z"
@@ -106,7 +114,7 @@
                                                                         me</span>
                                                         </div>
                                                         </a>
-                                                        <p class="fs-sm fw-normal drk-gray mb-0 ff-lato">Forgot
+                                                        <p class="fs-sm fw-normal drk-gray mb-0 ff-lato cursor-pointer">Forgot
                                                                 password?</p>
                                                 </div>
                                                 <button
